<resources>
    <string name="app_name" translatable="false">Zeiterfassung</string>
    <string name="LabelStartTime">Start Time:</string>
    <string name="LabelEndTime">End Time:</string>
    <string name="ButtonStart">Start</string>
    <string name="ButtonEnd">Finish</string>
    <string name="NoEmptyStartTime">NO EMPTY START VALUE FOUND!</string>
    <string name="MenuItemListData">List all Values</string>
    <string name="LabelComment">Comment:</string>
    <string name="checkBoxPause">Break</string>
    <string name="ButtonSelectDB">Select Database</string>
</resources>