<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/ActivityHPadding"
    android:paddingTop="@dimen/ActivityVPadding"
    android:paddingEnd="@dimen/ActivityHPadding"
    android:paddingBottom="@dimen/ActivityVPadding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LabelStartTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/edtText_StartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LabelEndTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/edtText_EndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LabelComment"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/edtText_Comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_StartCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonStart" />

    <Button
        android:id="@+id/btn_EndCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonEnd" />

    <Button
        android:id="@+id/btn_select_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openDatabase"
        android:text="@string/ButtonSelectDB" />

    <CheckBox
        android:id="@+id/chkBox_Pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxPause" />

</LinearLayout>